--- a/index.html
+++ b/index.html
@@ -20,9 +20,19 @@
             <div class="estudante-div">
                 <img src="img/julie.jpeg " alt="foto de perfil da julie" class="estudante-imagem">
                 <h3 class="estudante-nome">sou a aluna julie moraes lecheta</h3>
-                <h1> eu trabalho no marketing digital vendendo produtos fisicos </h1>
+                <h1> eu trabalho em lanchonete </h1>
                 <p> Estamos aprendendo linguagem de programaçao em HTML e CSS. Está é minha primeira página.</p>
-                <p>trablho pelo celular sem precisar sair de casa por conta da minha saude finais de samana dou um pequeno        alcilho onde eu trabalhava ate por que é um empreendimento familiar...</p>
+                <p> eu trabalho na lachonete e finais de semana eu ajudo em casa </p>
+                <a href="#">
+                    <img src="img/github.svg" alt="icone do Github"
+                </a>
+                <a href="#"></a>
+                    <img src="img/github.svg" alt="icone do Github
+                
+                    <img src="img/github.svg" alt="icone do Github
+                </a>
+
+            
             </div>
         </section>
 
