--- a/index.html
+++ b/index.html
@@ -24,15 +24,14 @@
                 <p> Estamos aprendendo linguagem de programaçao em HTML e CSS. Está é minha primeira página.</p>
                 <p> eu trabalho na lachonete e finais de semana eu ajudo em casa </p>
                 <a href="#">
-                    <img src="img/github.svg" alt="icone do Github"
+                    <img src="img/github.svg" alt="icone do Github" class="estudante-icone">                   
                 </a>
-                <a href="#"></a>
-                    <img src="img/github.svg" alt="icone do Github
-                
-                    <img src="img/github.svg" alt="icone do Github
+                <a href="#">
+                    <img src="img/github.svg" alt="icone do Github" class="estudante-icone">
                 </a>
-
-            
+                <a href="#">
+                    <img src="img/github.svg" alt="icone do Github" class="estudante-icone">
+                </a>
             </div>
         </section>
 
